<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.vladyslav.pushauth.SupportActivity.PinCode">

    <TextView
        android:id="@+id/createPin"
        android:layout_width="237dp"
        android:layout_height="29dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="59dp"
        android:text="@string/create_pin_code"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="27sp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterPin"
        android:layout_width="237dp"
        android:layout_height="29dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="59dp"
        android:text="@string/enter_pin_code"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="27sp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ecircle1"
        android:layout_width="21dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_circle_empty"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        tools:ignore="contentDescription"/>

    <ImageView
        android:id="@+id/ecircle2"
        android:layout_width="21dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_circle_empty"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        tools:ignore="contentDescription"/>

    <ImageView
        android:id="@+id/ecircle3"
        android:layout_width="21dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_circle_empty"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        tools:ignore="contentDescription"/>

    <ImageView
        android:id="@+id/ecircle4"
        android:layout_width="21dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_circle_empty"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        tools:ignore="contentDescription"/>

    <ImageView
        android:id="@+id/fcircle1"
        android:layout_width="21dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="108dp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_full"
        tools:ignore="contentDescription" />

    <ImageView
        android:id="@+id/fcircle2"
        android:layout_width="21dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="108dp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_full"
        tools:ignore="contentDescription"/>

    <ImageView
        android:id="@+id/fcircle3"
        android:layout_width="21dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="108dp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_full"
        tools:ignore="contentDescription"/>

    <ImageView
        android:id="@+id/fcircle4"
        android:layout_width="21dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="108dp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_full"
        tools:ignore="contentDescription"/>

    <Button
        android:id="@+id/buttonNum1"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_1"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@+id/buttonNum2"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonNum2"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_2"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum5"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonNum3"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_3"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum6"
        app:layout_constraintLeft_toRightOf="@+id/buttonNum2"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonNum4"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_4"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.522"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonNum5"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/buttonNum5"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_5"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintVertical_bias="0.522" />

    <Button
        android:id="@+id/buttonNum6"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_6"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.522"
        app:layout_constraintLeft_toRightOf="@+id/buttonNum5"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/buttonNum7"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_7"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonNum8"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/buttonNum8"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_8"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <Button
        android:id="@+id/buttonNum9"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_9"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/buttonNum8"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum6"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonNum0"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:background="@drawable/circle_button"
        android:onClick="onClick"
        android:text="@string/btn_0"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum8"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <ImageView
        android:id="@+id/backspace"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="delete"
        tools:ignore="contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintLeft_toRightOf="@+id/buttonNum0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum9"
        app:layout_constraintVertical_bias="0.195"
        app:srcCompat="@drawable/ic_backspace" />

</android.support.constraint.ConstraintLayout>
